# microjson

./: .dockerignore  .gitignore  404.html  README.md  README_short.md  docker-compose.yml  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml
about/: index.html
docker/: Dockerfile
docs/: 3d.md  about.md  example.md  index.md  installation.md  metadata_example.md  ome.md  provenance.md  pydantic.md  roadmap.md  tiling.md  tiling_demo.md  usage.md  validation.md
example/: index.html
license/: index.html
metadata_example/: index.html
ome/: index.html
provenance/: index.html
pydantic/: index.html
roadmap/: index.html
rust/: Cargo.toml
rust/src/: clip.rs  clip2d.rs  decoder_mvt.rs  encoder_draco.rs  encoder_glb.rs  encoder_meshopt.rs  encoder_mjb.rs  encoder_mvt.rs  encoder_pbf3.rs  fragment.rs  fragment2d.rs  lib.rs  morton.rs  obj_parser.rs  projector.rs  projector2d.rs  simplify.rs  simplify2d.rs  streaming.rs  streaming2d.rs  tile_transform.rs  tileset_json.rs  types.rs  types2d.rs
scripts/: benchmark_all_datasets.py  benchmark_consep_ml.py  benchmark_curriculum.py  benchmark_draco.py  benchmark_feature_read.py  benchmark_feature_retrieval.py  benchmark_format_read.py  benchmark_formats.py  benchmark_generation.py  benchmark_hemibrain_ml.py  benchmark_mouselight.py  benchmark_parquet_synthetic.py  benchmark_three_way.py  build_cython.py  build_feature_index.py  download_3dbag.py  download_and_generate.sh  download_consep.py  download_hemibrain.py  download_hubmap.py  download_merfish.py  export_glb.py  export_json.py  export_parquet.py  generate_all_pyramids.py  hemibrain_3dtiles_meshopt.py  hemibrain_parquet.py  mouselight_3dtiles_draco.py  mouselight_parquet.py  obj_to_microjson.py  obj_to_mudm.py  parquet_to_glb.py  smoke_test.py  validate_tiles3d.py  xenium_to_tiles.py
search/: search_index.json
src/microjson/: __init__.py  layout.py  model.py  polygen3d.py  swc.py  tilemodel.py  transforms.py
src/mudm/: __init__.py  (+12 more)
tests/: test_3d_models.py  test_arrow.py  test_arrow_integration.py  test_arrow_reader.py  test_benchmark_draco.py  test_geojson_schema.py  test_gltf_assembler.py  test_gltf_buffers.py  test_gltf_draco.py  test_gltf_integration.py  test_gltf_mesh_builder.py  test_gltf_triangulator.py  test_gltf_writer.py  test_layout.py  test_mudm.py  test_neuroglancer_annotations.py  test_neuroglancer_binary.py  test_neuroglancer_mesh.py  test_neuroglancer_models.py  test_neuroglancer_multilod.py  test_neuroglancer_properties.py  test_neuroglancer_skeleton.py  test_neuroglancer_state.py  test_neuroglancer_writer.py  test_obj_to_microjson.py  test_obj_to_mudm.py  test_original_schema.py  test_polygen3d.py  test_provenance.py  test_swc.py  test_tilecut.py  test_tiled_geometry.py  test_tilejson.py  test_tiling2d_parquet.py  test_tiling2d_pbf.py  test_tiling3d.py  test_tiling3d_3dtiles.py  test_tiling3d_cython.py  test_tiling3d_feature_mjb.py  test_tiling3d_feature_pbf3.py  (+7 more)
tiling/: index.html
tiling_demo/: index.html
usage/: index.html
validation/: index.html
viewer/: index.html  serve.py
viewer2d/: index.html
(+144 files in other folders)
