[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "microjson"
version = "0.4.2"
description = "MicroJSON is a library for validating, parsing, and manipulating MicroJSON data."
readme = "README_short.md"
authors = [
    { name = "Bengt Ljungquist", email = "bengt.ljungquist@nextonicsolutions.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]
keywords = ["json", "microscopy", "microjson"]
dependencies = [
    "pydantic>=2.3.0",
    "geojson-pydantic>=1.2.0",
    "geojson2vt>=1.0.1",
    "protobuf>=5.29.3",
    "geojson>=3.1.0",
    "shapely>=2.0.6",
    "mapbox-vector-tile>=2.1.0",
    "pyarrow>=19.0.1",
    "geopandas>=1.0.1",
    "jsonschema>=4.23.0",
    "pygltflib>=1.16",
    "numpy>=1.26",
]

[project.optional-dependencies]
draco = ["DracoPy>=1.4"]
all = [
    "bfio[all]==2.4.6",
    "scipy>=1.8",
    "filepattern>=2.0.1",
    "vaex-core>=4.8.0",
    "scikit-image>=0.20.0",
    "matplotlib>=3.5.1",
]

[project.urls]
Documentation = "https://polusai.github.io/microjson/"
Source = "https://github.com/polusai/microjson"
Tracker = "https://github.com/polusai/microjson/issues"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "microjson._rs"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests/"]
pythonpath = ["src/"]

[tool.bumpver]
current_version = "0.4.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "Bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "{version}"', 'version = "{version}"']
"src/microjson/__init__.py" = ["{version}"]
".bumpversion.cfg" = ["current_version = {version}"]

[tool.codespell]
skip = '.git*,invalid'
check-hidden = true
ignore-regex = '^\s*"image/\S+": ".*'
